# lib-version

./: .gitignore  pyproject.toml
.github/workflows/: release-lib-version.yml
lib_version/: __init__.py
