[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "lib-version"
requires-python = ">=3.11"
authors = [
  { name = "Rok Stular", email = "r.stular@student.tudelft.nl" },
]
dynamic = ["version"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "lib_version/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["lib_version"]
